--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,18 @@
 [tool.poetry]
 name = "annoworkcli"
-version = "1.3.11"
+version = "2.0.0"
 description = ""
 authors = ["yuji38kwmt"]
-
-[[tool.poetry.source]]
-name = "kci"
-url = 'https://kurusugawa.jp/nexus3/repository/KRS-pypi/simple'
-
 
 [tool.poetry.dependencies]
 python = "^3.8"
 pyyaml = "*"
-annoworkapi = ">=1.4.0"
+annoworkapi = ">=2.0"
 annofabapi = ">=0.52.4"
 more-itertools = "*"
 pandas = "*"
 isodate = "*"
-annofabcli = ">=1.51.5"
+annofabcli = ">=1.55.0"
 
 [tool.poetry.scripts]
 annoworkcli = "annoworkcli.__main__:main"
@@ -42,7 +37,7 @@ types-PyYAML = "*"
 ipython = "*"
 
 # Document library
-sphinx = "^4.3"
+sphinx = "*"
 pydata-sphinx-theme = "*"
 sphinx-last-updated-by-git = "*"
 sphinx-argparse = "*"
