--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,3 +11,7 @@ sphinx:
 python:
    install:
    - requirements: docs/requirements.txt
+   - requirements: docs/requirements.txt
+   - method: pip
+     path: .
+
