--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,21 @@
 [pytest]
 addopts = --verbose --capture=no -rs
+
+markers = access_webapi: WebAPIにアクセスするテスト
+
+[annowork]
+organization_id = a9956d30-b201-418a-a03b-b9b8b55b2e3d
+
+
+
+; [pytest]
+; addopts = --verbose --capture=no -rs
+
+; [annofab]
+; # Caution : Annofab project may be changed!!
+; # Specify AnnoFab project that has owner role assigned to you.
+; project_id = 58a2a621-7d4b-41e7-927b-cdc570c1114a
+; task_id = 	sample_147
+
+; 3dpc_project_id = 3bc1a5e3-73e0-4b2f-b893-dd20f3de5ff9
+; 3dpc_task_id = 	test5
