--- a/annoworkcli/data/logging.yaml
+++ b/annoworkcli/data/logging.yaml
@@ -6,7 +6,8 @@ handlers:
   fileRotatingHandler:
     class: logging.handlers.TimedRotatingFileHandler
     filename: .log/annoworkcli.log
-    when: 'D'
+    # https://qiita.com/KAZAMAI_NaruTo/items/a1dc89e4ae0ecab56c77
+    when: 'MIDNIGHT'
     encoding: 'utf-8'
     formatter: customFormatter
   consoleHandler:
