--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,7 @@ addopts = --verbose --capture=no -rs
 markers = access_webapi: WebAPIにアクセスするテスト
 
 [annowork]
-organization_id = a9956d30-b201-418a-a03b-b9b8b55b2e3d
+workspace_id = a9956d30-b201-418a-a03b-b9b8b55b2e3d
 
 
 
