--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: python
+dist: focal
 
 python:
   - "3.8"
   - "3.9"
-
-dist: focal
+  - "3.10"
 
 install:
+  - pip install pip --upgrade
   - pip install poetry
   - travis_retry poetry install
 
