--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+# 3.8.1まで指定している理由: flake8 v6.0.0を利用するため、Python3.8.0のサポートを落とした
+python = "^3.8.1"
 pyyaml = "*"
 annoworkapi = ">=3.0.1"
 annofabapi = ">=0.52.4"
@@ -49,7 +50,7 @@ mypy = "*"
 pylint = "*"
 autoflake = "*"
 flake8 = "*"
-black = "*"
+black = "<23"
 
 # type stub package
 types-requests = "*"
