--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "annoworkcli"
-version = "3.2.1"
+version = "0.0.0"  # `poetry-dynamic-versioning`を使ってGitHubのバージョンタグを取得している。変更不要
 description = "AnnoworkのCLI(Command Line Interface)"
 authors = ["Kurusugawa Computer Inc."]
 license = "MIT"
@@ -10,9 +10,7 @@ repository="https://github.com/kurusugawa-computer/annowork-cli"
 classifiers = [
         "Development Status :: 4 - Beta",
         "Intended Audience :: Developers",
-        "License :: OSI Approved :: MIT License",
         "Environment :: Console",
-        "Programming Language :: Python",
         "Topic :: Utilities",
         "Operating System :: OS Independent",
 ]
@@ -83,7 +81,13 @@ ignore_missing_imports = true
 check_untyped_defs = true
 
 
+[tool.poetry-dynamic-versioning]
+enable = true
+format = "{base}"
+
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
+build-backend = "poetry_dynamic_versioning.backend"
+
+
