--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ jobs:
       script:
         # 開発環境と同じPythonバージョンのみlintを実行する
         - make lint
-    - python: 3.12
+    # なぜかPython3.12だとpoetry installが失敗するので、一旦コメントアウト
+    # - python: 3.12
 
 
 branches:
