--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ jobs:
       script:
         # 開発環境と同じPythonバージョンのみlintを実行する
         - make lint
-    # なぜかPython3.12だとpoetry installが失敗するので、一旦コメントアウト
-    # - python: 3.12
+    - python: 3.12
 
 
 branches:
