--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,17 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.154.0/containers/docker-existing-dockerfile
 {
-	"name": "KCI Python",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"context": ".",
-		"args": {
-			"COMPOSE_VERSION": "1.27.4",
-		},
-		"target": "devcontainer"
+		"args": {}
 	},
 	"containerUser": "vscode",
 	"remoteUser": "vscode",
 	"updateRemoteUserUID": true,
-	"overrideCommand": false,
 	// マウント対象のディレクトリを事前に作成する
 	"initializeCommand": "mkdir -p ${localWorkspaceFolder}/.devcontainer/venv",
 	"mounts": [
-		"source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
-		"source=${localWorkspaceFolder}/.devcontainer/.extensions,target=/home/vscode/.vscode-server/extensions,type=bind",
 		// ホスト側のvenvとコンテン側のvenvを分類して、ホスト側でpoetryコマンドを利用できるようにする
 		"source=${localWorkspaceFolder}/.devcontainer/venv,target=${containerWorkspaceFolder}/.venv,type=bind"
 	],
@@ -32,9 +25,15 @@
 		"--env=ANNOFAB_USER_ID",
 		"--env=ANNOFAB_PASSWORD"
 	],
+	"containerEnv": {
+		"CONTAINER_WORKSPACE": "${containerWorkspaceFolder}",
+		"LOCAL_WORKSPACE": "${localWorkspaceFolder}"
+	},
+	"workspaceMount": "source=${localWorkspaceFolder},target=/workspaces,type=bind,consistency=cached",
+	"workspaceFolder": "/workspaces",
 	"postStartCommand": "poetry install",
 	"customizations": {
-		"vscode": {			
+		"vscode": {
 			"extensions": [
 				"mosapride.zenkaku",
 				"ms-python.python",
@@ -47,5 +46,4 @@
 			]
 		}
 	}
-
 }
