--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,9 @@ ignore = [
     "FIX", # TODOやFIXMEを使うため無視する
     "TD", # TODOコメントの書き方に気にしていないので無視する
 
+    # いずれ無視しないようにする
+    "FA100", # future-rewritable-type-annotation
+
     # 以下のルールはannofabcliのコードに合っていないので無効化した
     "RSE", # flake8-raise
     "D", # pydocstyle, Docstringを中途半端にしか書いていないので、除外する
