--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,16 +35,11 @@ pytest = "^7"
 pytest-xdist = "*"
 pytest-cov = "*"
 
-[tool.poetry.group.formatter.dependencies]
-autoflake = "*"
-isort = "*"
-black = "^23"
-
 [tool.poetry.group.linter.dependencies]
 # pythonバージョンを指定している理由：lintは開発環境と同じPythonバージョンで実行するため。また古いPythonバージョンにサポートしていないライブラリのバージョンがあるため
 mypy = {version="^1", python = ">=3.11"}
-flake8 = {version="^7", python = ">=3.11"}
 pylint = {version="^3", python = ">=3.11"}
+ruff = {version="^0.2", python=">=3.11"}
 
 # typeshed
 types-requests = "*"
@@ -66,19 +61,70 @@ optional = true
 ipython = "*"
 
 
-[tool.black]
-line-length = 120
-
-
-[tool.isort]
-profile = "black"
-line_length = 120
-
-
 [tool.mypy]
 ignore_missing_imports = true
-
 check_untyped_defs = true
+
+
+[tool.ruff]
+target-version = "py39"
+line-length = 150
+
+
+[tool.ruff.lint]
+ignore = [
+    "G004", # `logging-f-string` : loggingでf-stringを使いたいので無視する
+    "PD901", #すでに`df`という変数をいろんなところで使っているため
+    "PD002", #すでにpandasで`inplace=True`はいろんなところで使っているため
+    "RUF001", # 全角記号など`ambiguous unicode character`も使いたいため
+    "RUF002",# 全角記号など`ambiguous unicode character`も使いたいため
+    "RUF003",# 全角記号など`ambiguous unicode character`も使いたいため
+    "PLC1901", # compare-to-empty-string : `if a == "`のように空文字列で直接比較したいときがあるため
+    "PLR2004", # magic-value-comparison: listのサイズで判定するときがよくあるため
+    "ANN101", # missing-type-self: 引数selfには型ヒントは付けていないため
+    "ANN102", # missing-type-cls: 引数clsには型ヒントは付けていないため
+    "ERA", # : 役立つこともあるが、コメントアウトしていないコードも警告されるので無視する
+    "PERF203", # try-except-in-loop: ループ内でtry-exceptを使うこともあるため無視する。またPython3.11以降ｈ
+    "FIX", # TODOやFIXMEを使うため無視する
+    "TD", # TODOコメントの書き方に気にしていないので無視する
+
+    # いずれ無視しないようにする
+    "FA100", # future-rewritable-type-annotation
+
+    # 以下のルールはannofabcliのコードに合っていないので無効化した
+    "RSE", # flake8-raise
+    "D", # pydocstyle, Docstringを中途半端にしか書いていないので、除外する
+    "C90", # mccabe
+    "T20", # flake8-print
+    "SLF", #  flake8-self
+    "BLE", # flake8-blind-except
+    "FBT", # flake8-boolean-trap
+    "TRY", # tryceratops
+    "COM", # flake8-commas
+    "S", # flake8-bandit
+    "EM",#flake8-errmsg
+    "EXE", # flake8-executable
+    "ICN", # flake8-import-conventions
+    "RET",#flake8-return
+    "SIM",#flake8-simplify
+    "TCH", # flake8-type-checking
+    "PTH", #pathlibを使わないコードが多いので、除外する
+    "ISC", #flake8-implicit-str-concat
+    "N", # pep8-naming
+    "PT", # flake8-pytest-style
+]
+
+select = [
+    "ALL"
+]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+
+[tool.ruff.lint.pylint]
+max-args = 10
+
 
 
 [tool.poetry-dynamic-versioning]
