--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,7 @@ ignore = [
     # いずれ無視しないようにする
     "FA100", # future-rewritable-type-annotation
 
-    # 以下のルールはannofabcliのコードに合っていないので無効化した
+    # 以下のルールはコードに合っていないので無効化した
     "RSE", # flake8-raise
     "D", # pydocstyle, Docstringを中途半端にしか書いていないので、除外する
     "C90", # mccabe
@@ -125,6 +125,16 @@ convention = "google"
 [tool.ruff.lint.pylint]
 max-args = 10
 
+
+[tool.ruff.lint.per-file-ignores]
+# テストコードはチェックを緩和する
+"tests/**.py" = [
+    "PGH",  # pygrep-hooks
+    "DTZ",  # flake8-datetimez
+    "ANN",  # flake8-annotations
+    "E501",  # line-too-long
+    "RUF100"  # unused-noqa
+]
 
 
 [tool.poetry-dynamic-versioning]
