--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,7 +110,7 @@ ignore = [
     "TCH", # flake8-type-checking
     "PTH", #pathlibを使わないコードが多いので、除外する
     "ISC", #flake8-implicit-str-concat
-    "N", # pep8-naming
+#    "N", # pep8-naming
     "PT", # flake8-pytest-style
 ]
 
@@ -133,7 +133,8 @@ max-args = 10
     "DTZ",  # flake8-datetimez
     "ANN",  # flake8-annotations
     "E501",  # line-too-long
-    "RUF100"  # unused-noqa
+    "RUF100",  # unused-noqa
+    "N", # pep8-naming
 ]
 
 
