--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,75 +1,75 @@
-[tool.poetry]
+[project]
 name = "annoworkcli"
-version = "0.0.0"  # `poetry-dynamic-versioning`を使ってGitHubのバージョンタグを取得している。変更不要
+version = "0.0.0"
 description = "AnnoworkのCLI(Command Line Interface)"
-authors = ["Kurusugawa Computer Inc."]
+authors = [{ name = "Kurusugawa Computer Inc." }]
+requires-python = "~=3.9"
+readme = "README.md"
 license = "MIT"
-keywords=["annowork", "cli"]
-readme="README.md"
-repository="https://github.com/kurusugawa-computer/annowork-cli"
+keywords = [
+    "annowork",
+    "cli",
+]
 classifiers = [
-        "Development Status :: 4 - Beta",
-        "Intended Audience :: Developers",
-        "Environment :: Console",
-        "Topic :: Utilities",
-        "Operating System :: OS Independent",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Environment :: Console",
+    "Topic :: Utilities",
+    "Operating System :: OS Independent",
+]
+dependencies = [
+    "pyyaml",
+    "annoworkapi>=3.2.1,<4",
+    "annofabapi>=1,<2",
+    "more-itertools",
+    "pandas",
+    "isodate",
+    "annofabcli~=1.90",
 ]
 
+[project.urls]
+Repository = "https://github.com/kurusugawa-computer/annowork-cli"
 
-[tool.poetry.dependencies]
-python = "^3.9"
-pyyaml = "*"
-annoworkapi = "^3.2.1"
-annofabapi = "^1"
-more-itertools = "*"
-pandas = "*"
-isodate = "*"
-annofabcli = "^1.90"
-
-[tool.poetry.scripts]
+[project.scripts]
 annoworkcli = "annoworkcli.__main__:main"
 
+[dependency-groups]
+test = [
+    "pytest>=8,<9",
+    "pytest-xdist",
+    "pytest-cov",
+]
+linter = [
+    "mypy>=1,<2 ; python_version >= '3.12'",
+    "pylint>=3,<4 ; python_version >= '3.12'",
+    "ruff>=0.9,<0.10 ; python_version >= '3.12'",
+    "types-requests",
+    "types-python-dateutil",
+    "types-PyYAML",
+]
+documentation = [
+    "sphinx>=8,<9 ; python_version >= '3.12'",
+    "pydata-sphinx-theme>=0.13 ; python_version >= '3.12'",
+    "sphinx-last-updated-by-git ; python_version >= '3.12'",
+    "sphinx-argparse ; python_version >= '3.12'",
+]
+dev = ["ipython"]
 
-[tool.poetry.group.test.dependencies]
-pytest = "^8"
-pytest-xdist = "*"
-pytest-cov = "*"
-
-
-# pythonバージョンを指定している理由：linterやdocumentationツールは開発環境と同じPythonバージョンで実行するため。また古いPythonバージョンにサポートしていないライブラリのバージョンがあるため
-[tool.poetry.group.linter.dependencies]
-mypy = {version="^1", python = ">=3.12"}
-pylint = {version="^3", python = ">=3.12"}
-ruff = {version="^0.9", python=">=3.12"}
-
-# typeshed
-types-requests = "*"
-types-python-dateutil = "*"
-types-PyYAML = "*"
-
-[tool.poetry.group.documentation.dependencies]
-sphinx = {version="^8", python=">=3.12"}
-pydata-sphinx-theme = {version=">=0.13", python=">=3.12"}
-sphinx-last-updated-by-git = {version="*", python=">=3.12"}
-sphinx-argparse = {version="*", python=">=3.12"}
-
-[tool.poetry.group.dev]
-# 開発するときのみ必要なライブラリ。インストールしなくても開発はできるので、オプショナルにする
-optional = true
-
-[tool.poetry.group.dev.dependencies]
-ipython = "*"
-
+[tool.uv]
+default-groups = [
+    "test",
+    "linter",
+    "documentation",
+    "dev",
+]
 
 [tool.mypy]
 ignore_missing_imports = true
 check_untyped_defs = true
 
-
 [tool.ruff]
 target-version = "py39"
 line-length = 150
-
 
 [tool.ruff.lint]
 ignore = [
@@ -116,10 +116,8 @@ select = [
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
-
 [tool.ruff.lint.pylint]
 max-args = 10
-
 
 [tool.ruff.lint.per-file-ignores]
 # テストコードはチェックを緩和する
@@ -133,10 +131,8 @@ max-args = 10
     "PLC2401", # non-ascii-name
 ]
 
-
 [tool.poetry-dynamic-versioning]
 enable = true
-
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
