--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,6 +134,7 @@ max-args = 10
     "RUF100",  # unused-noqa
     "N", # pep8-naming
     "PLC2401", # non-ascii-name
+    "PTH", # テストコードはpathlibを使わないこともあるため
 ]
 
 [build-system]
